--- a/day6.html
+++ b/day6.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <marquee direction="up" behavior="alternate" height="500px">
-    <marquee scrollamount="20" direction="right"><img src="C:\Users\Sasmita Jena\Pictures\Cover20.gif"</marquee>
+    <marquee scrollamount="20" direction="right"><img src="C:\Users\Sasmita Jena\Pictures\Cover20.gif"></marquee>
     </marquee>
 </body>
 </html>
